test-suite/tests/ui/designated/redundant_attribute.stderr
error: parameter is already designated
 --> tests/ui/designated/redundant_attribute.rs:5:27
  |
5 | pub struct Test<#[stated] #[stated] S>;
  |                           ^^^^^^^^^

error: parameter is already designated
 --> tests/ui/designated/redundant_attribute.rs:9:16
  |
9 | impl<#[stated] #[stated] S> Test<S> {}
  |                ^^^^^^^^^
